fix thread list notification visiblity

--- a/res/css/views/right_panel/_ThreadPanel.scss
+++ b/res/css/views/right_panel/_ThreadPanel.scss
@@ -134,6 +134,10 @@ limitations under the License.
         padding-right: 0;
     }
 
+    .mx_RoomView_MessageList {
+        content-visibility: visible;
+    }
+
     .mx_EventTile,
     .mx_GenericEventListSummary {
         // Account for scrollbar when hovering
